add SEAL subrepo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,17 @@ cmake_minimum_required(VERSION 3.10)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(ALLOW_DOWNLOADING_GOOGLETEST ON)
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+include_directories("third_party/SEAL/native/src")
 
 project(SealPIR VERSION 2.1 LANGUAGES CXX)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+add_subdirectory(third_party/SEAL/native/src)
 
-add_executable(main 
+
+add_executable(main
 	main.cpp
 )
 
@@ -16,6 +22,4 @@ add_library(sealpir STATIC
   pir_server.cpp
 )
 
-find_package(SEAL 3.2.0 EXACT REQUIRED)
-
-target_link_libraries(main sealpir SEAL::seal)
+target_link_libraries(main sealpir seal)
